--- a/public/assets/css/master_style.css
+++ b/public/assets/css/master_style.css
@@ -40,14 +40,14 @@ Project:	Fab Admin - Responsive Admin Template
 /*******************
 import icon and fonts Styles
 *******************/
-@import url(./font-awesome.min.css);
-@import url(./ionicons.min.css);
-@import url(./themify-icons.css);
-@import url(./linea.css);
-@import url(./glyphicon.css);
-@import url(./flag-icon.min.css);
-@import url(./materialdesignicons.css);
-@import url(./simple-line-icons.css);
+/* @import url(./font-awesome.min.css); */
+/* @import url(./ionicons.min.css); */
+/* @import url(./themify-icons.css); */
+/* @import url(./linea.css); */
+/* @import url(./glyphicon.css); */
+/* @import url(./flag-icon.min.css); */
+/* @import url(./materialdesignicons.css); */
+/* @import url(./simple-line-icons.css); */
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
 /*------------------------------------------------------------------
@@ -532,7 +532,7 @@ a:active, a:focus, a:hover {
     position: relative;
     width: 100%;
     padding: 10px 0 10px;
-    background-image: url(../../images//user-info.jpg);
+    background-image: url("{{ asset('assets/images/user-info.jpg') }}");
 }
 .user-panel:after, .user-panel:before {
     content: " ";
@@ -611,7 +611,7 @@ a:active, a:focus, a:hover {
     margin: 15px 0;
 }
 .user-profile {
-    background-image:url(../../images//user-info.jpg);
+    background-image:url("/assets/images/user-info.jpg");
 }
 .sidebar-menu .user-profile > a img {
     width: 30px;
