--- a/public/assets/css/master_style.css
+++ b/public/assets/css/master_style.css
@@ -1,53 +1,4 @@
-/*------------------------------------------------------------------
-[Master Stylesheet]
 
-Project:	Fab Admin - Responsive Admin Template
--------------------------------------------------------------------*/
-
-/*------------------------------------------------------------------
-[Table of contents]
-
-1. Body, layout
-2. Header
-3. Sidebar
-4. Form-element and progress bar
-5. Box
-6. User card
-7. tab
-8. google map
-9. wizard
-10. weather
-11. Chat and info-box
-12. timeline
-13. Button
-14. callout
-15. tab
-16. pagination
-17. data table
-18. direct-chat
-19. modal
-20. widget
-21. treevie
-22. mailbox
-23. lockscreen
-24. login-box
-25. social btn
-26. color Skin
-
--------------------------------------------------------------------*/
-
-
-/*******************
-import icon and fonts Styles
-*******************/
-/* @import url(./font-awesome.min.css); */
-/* @import url(./ionicons.min.css); */
-/* @import url(./themify-icons.css); */
-/* @import url(./linea.css); */
-/* @import url(./glyphicon.css); */
-/* @import url(./flag-icon.min.css); */
-/* @import url(./materialdesignicons.css); */
-/* @import url(./simple-line-icons.css); */
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
 /*------------------------------------------------------------------
@@ -532,7 +483,7 @@ a:active, a:focus, a:hover {
     position: relative;
     width: 100%;
     padding: 10px 0 10px;
-    background-image: url("{{ asset('assets/images/user-info.jpg') }}");
+    background-image: url("assets/images/user-info.jpg");
 }
 .user-panel:after, .user-panel:before {
     content: " ";
@@ -611,7 +562,7 @@ a:active, a:focus, a:hover {
     margin: 15px 0;
 }
 .user-profile {
-    background-image:url("/assets/images/user-info.jpg");
+    background-image:url("assets/images/user-info.jpg");
 }
 .sidebar-menu .user-profile > a img {
     width: 30px;
