--- a/public/assets/css/master_style.css
+++ b/public/assets/css/master_style.css
@@ -483,7 +483,7 @@ a:active, a:focus, a:hover {
     position: relative;
     width: 100%;
     padding: 10px 0 10px;
-    background-image: url("assets/images/user-info.jpg");
+    background-image: url("../images/user-info.jpg");
 }
 .user-panel:after, .user-panel:before {
     content: " ";
@@ -562,7 +562,7 @@ a:active, a:focus, a:hover {
     margin: 15px 0;
 }
 .user-profile {
-    background-image:url("assets/images/user-info.jpg");
+    background-image: url("../images/user-info.jpg");
 }
 .sidebar-menu .user-profile > a img {
     width: 30px;
