--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -44,8 +44,8 @@
 html {
   font-family: sans-serif;
   line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+  /* -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%; */
   -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: transparent;
 }
